Update shop.html to include shop-status.css for enhanced styling; modify main.css to adjust font size for nav-title, improving visual consistency across the application.

--- a/shop.html
+++ b/shop.html
@@ -19,6 +19,7 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="src/css/main.css">
   <link rel="stylesheet" href="src/css/shop.css">
+  <link rel="stylesheet" href="src/css/shop-status.css">
 </head>
 <body>
   <div class="wrapper">
@@ -372,7 +373,7 @@
             </div>
           </div>
           <div class="table-container">
-            <table id="shopDetailsTable" class="table">
+            <table id="shopDetailsTable" class="table align-middle">
               <thead>
                 <tr>
                   <th>Shop</th>
