Update logo text across index.html, invoiceCreation.html, and shop.html to enhance brand consistency. Modify main.css for improved logo styling and layout adjustments. Change "Logout" button text to "Sign Out" in shop.html for better clarity.

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             </svg>
           </div>
           <div class="logo-text">
-            <span class="primary">Genpact</span>
-            <span class="secondary">SMBA Dashboard</span>
+            <span class="primary">SMBA</span>
+            <span class="secondary">Dashboard</span>
           </div>
         </div>
         <span class="logo-version">v1.0.0</span>
