--- a/shop.html
+++ b/shop.html
@@ -44,8 +44,8 @@
             </svg>
           </div>
           <div class="logo-text">
-            <span class="primary">Genpact</span>
-            <span class="secondary">SMBA Dashboard</span>
+            <span class="primary">SMBA</span>
+            <span class="secondary">Dashboard</span>
           </div>
         </div>
         <span class="logo-version">v1.0.0</span>
@@ -82,7 +82,7 @@
 
       <a href="#" class="logout-button">
         <i class="bi bi-box-arrow-right"></i>
-        <span>Logout</span>
+        <span>Sign Out</span>
       </a>
     </nav>
 
