Refactor shop.html to enhance stat card layout and styling, improving responsiveness and visual consistency. Update main.css to adjust header padding for better alignment. Revise shop.css to modernize stat card design with new styles and hover effects, ensuring a more polished user interface.

--- a/shop.html
+++ b/shop.html
@@ -182,21 +182,23 @@
         </div>
 
         <!-- Quick Stats -->
-        <div class="row g-3 mb-4">
-          <div class="col-xl-3 col-md-6">
+        <div class="row g-2 mb-3">
+          <div class="col-md-4 col-sm-12">
             <div class="stat-card h-100">
-              <div class="stat-header">
-                <div class="stat-title">
-                  <i class="bi bi-shop"></i>
-                  Total SV
+              <div class="stat-content">
+                <div class="stat-main">
+                  <div class="stat-value">27</div>
+                  <div class="stat-title">Total SV</div>
                 </div>
-                <div class="stat-trend positive">
-                  <i class="bi bi-arrow-up-right"></i>
-                  8.2%
+                <div class="stat-icon-wrapper">
+                  <i class="bi bi-shop"></i>
                 </div>
               </div>
-              <div class="stat-content">
-                <div class="stat-value">27</div>
+              <div class="stat-footer">
+                <div class="stat-trend positive">
+                  <i class="bi bi-arrow-up-right"></i>
+                  <span>8.2%</span>
+                </div>
                 <div class="stat-comparison">
                   <span class="comparison-value">25</span>
                   <span class="comparison-label">prev</span>
@@ -204,20 +206,22 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-md-6">
+          <div class="col-md-4 col-sm-12">
             <div class="stat-card h-100">
-              <div class="stat-header">
-                <div class="stat-title">
-                  <i class="bi bi-exclamation-circle"></i>
-                  Past Due
+              <div class="stat-content">
+                <div class="stat-main">
+                  <div class="stat-value">2</div>
+                  <div class="stat-title">Past Due</div>
                 </div>
-                <div class="stat-trend negative">
-                  <i class="bi bi-arrow-down-right"></i>
-                  2.5%
+                <div class="stat-icon-wrapper">
+                  <i class="bi bi-exclamation-circle"></i>
                 </div>
               </div>
-              <div class="stat-content">
-                <div class="stat-value">2</div>
+              <div class="stat-footer">
+                <div class="stat-trend negative">
+                  <i class="bi bi-arrow-down-right"></i>
+                  <span>2.5%</span>
+                </div>
                 <div class="stat-comparison">
                   <span class="comparison-value">3</span>
                   <span class="comparison-label">prev</span>
@@ -225,41 +229,23 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-md-6">
+          
+          <div class="col-md-4 col-sm-12">
             <div class="stat-card h-100">
-              <div class="stat-header">
-                <div class="stat-title">
-                  <i class="bi bi-clock"></i>
-                  Upcoming
-                </div>
-                <div class="stat-trend positive">
-                  <i class="bi bi-arrow-up-right"></i>
-                  15.8%
-                </div>
-              </div>
               <div class="stat-content">
-                <div class="stat-value">5</div>
-                <div class="stat-comparison">
-                  <span class="comparison-value">4</span>
-                  <span class="comparison-label">prev</span>
+                <div class="stat-main">
+                  <div class="stat-value">20</div>
+                  <div class="stat-title">No Due</div>
                 </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-xl-3 col-md-6">
-            <div class="stat-card h-100">
-              <div class="stat-header">
-                <div class="stat-title">
+                <div class="stat-icon-wrapper">
                   <i class="bi bi-check-circle"></i>
-                  No Due
-                </div>
-                <div class="stat-trend positive">
-                  <i class="bi bi-arrow-up-right"></i>
-                  12.5%
                 </div>
               </div>
-              <div class="stat-content">
-                <div class="stat-value">20</div>
+              <div class="stat-footer">
+                <div class="stat-trend positive">
+                  <i class="bi bi-arrow-up-right"></i>
+                  <span>12.5%</span>
+                </div>
                 <div class="stat-comparison">
                   <span class="comparison-value">18</span>
                   <span class="comparison-label">prev</span>
