--- a/invoiceSummary.html
+++ b/invoiceSummary.html
@@ -68,7 +68,7 @@
               <span class="nav-subtitle">Monitor Shop Performance</span>
             </div>
           </a>
-          <a class="nav-link active" href="invoiceCreation.html">
+          <a class="nav-link active" href="invoiceSummary.html">
             <i class="bi bi-file-text"></i>
             <div class="nav-content">
               <span class="nav-title">Invoice Summary</span>
